# reflect

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  commands.ts  global.css  icons.xml  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: accordion.tsx  alert-dialog.tsx  background.tsx  badge.tsx  button.tsx  dropdown-menu.tsx  focus-scope.tsx  handle.tsx  icon.tsx  input-number.tsx  input.tsx  label.tsx  overlay.tsx  panel-slider.tsx  pattern.tsx  popover.tsx  portal.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx  theme-provider.tsx  toggle.tsx  tooltip.tsx  tree.tsx  truncate-text.tsx
src/data/: DataSource.ts  MockNetworkTablesSource.ts  NetworkTablesSource.ts
src/hooks/: useElementSize.ts  useGlobalRoot.ts  useIcons.ts  useKeyPress.ts  useRobotSettings.ts  useSyncWindowTitle.ts
src/lib/: react.ts  storage.ts  types.ts  utils.ts
src/mock/: nt4.json
src/parts/: AnimationLoop.ts  Dashboard.tsx  DashboardView.tsx  Layout.ts  Modal.ts  ModalManager.tsx  ModalTemplate.ts  NavBar.tsx  Settings.tsx  TopicEntry.tsx  TopicIcon.tsx  TopicsExplorer.tsx  ViewportPane.tsx  Widget.tsx  WidgetEditableAdorner.tsx  WidgetGallery.tsx  WidgetGalleryItem.tsx  (+3 more)
(+39 files in other folders)
